# chiatienan

./: .env.example  .gitignore  Caddyfile  PRIVACY.md  README.md  TERMS.md  TODO.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: accounts.py  admin.py  agent.py  agui.py  auth.py  bridge_smoke.py  chat.py  clock.py  config.py  cursor_runner.py  db.py  drafts.py  images.py  ledger.py  main.py  memory.py  models.py  money.py  notes.py  periods.py  prompt.py  qr.py  realtime.py  reply.py  rooms.py  roster.py  skills.py  summarize.py  teams.py  teams_parse.py  tools.py  worker.py
backend/app/agent_skills/rules/: money-safety.mdc
backend/tests/: conftest.py  test_accounts.py  test_agent.py  test_agui.py  test_api.py  test_auth.py  test_chat.py  test_chat_bodies.py  test_chat_payment_turn.py  test_config.py  test_debt_breakdown.py  test_drafts.py  test_golden_meals.py  test_images.py  test_ledger.py  test_ledger_changed_event.py  test_ledger_endpoint.py  test_main.py  test_meal_linked_payment.py  test_member_statement.py  test_memory.py  test_models.py  test_money.py  test_notes.py  test_payment_drafts.py  test_period_summary.py  test_periods.py  test_prompt.py  test_propose_meal_occurred_on.py  test_propose_payment_grossdir.py  test_qr.py  test_quick_pay.py  test_realtime.py  test_reply.py  test_resolve_date.py  test_rooms.py  test_roster.py  test_scenario_week.py  test_scenario_week_llm.py  test_skills_materializer.py  (+6 more)
backend/tests/golden/: meals.py  scenario_week.py
deploy/: Caddyfile  DEBUGGING.md  README.md  (+2 more)
reference/sample-cursor-sdk-with-image/backend/: pyproject.toml
reference/sample-cursor-sdk-with-image/backend/app/: config.py  cursor_agent.py  cursor_agui.py  cursor_runner.py  images.py  main.py  prompt.py  tools.py
(+138 files in other folders)
