[project]
name = "chiatienan"
version = "0.1.0"
description = "Teams lunch-splitting bot (Cursor SDK agent + deterministic ledger)"
requires-python = ">=3.11"
dependencies = [
    "cursor-sdk>=0.1.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "sqlalchemy>=2",
    "botbuilder-core>=4.16",
    "aiohttp>=3.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
